# worldfair-agent

./: .env.example  .gitignore  README.md  worldfair-agent.code-workspace
agent/: __init__.py  agent.py  confidence_evaluator.py  feedback-question-generator.md  mongodb-atlas.py  pyproject.toml  requirements.txt  server.py.bak  server_clean.py  setup_logger.py  state.py  test.ipynb
agent/web_app/: __init__.py  __main__.py  app.py
agent/web_app/templates/: index.html
