[project]
name = "worldfair-agent"
version = "0.1.0"
description = "Self-aware agent to evolve evaluation criteria and optimization strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "langgraph>=0.4.7",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
]
