[project]
name = "worldfair-agent"
version = "0.1.0"
description = "Self-aware agent to evolve evaluation criteria and optimization strategies"
requires-python = ">=3.12"
dependencies = [
  "colorama>=0.4.6",
  "fastapi>=0.115.12",
  "langchain>=0.3.25",
  "langgraph>=0.4.7",
  "numpy>=2.2.6",
  "openai>=1.82.1",
  "pydantic>=2.11.5",
  "pydantic-settings>=2.9.1",
  "pymongo>=4.13.0",
  "python-dotenv>=1.1.0",
  "rich>=14.0.0",
]
